Done with user edit/update, index, and destroy actions

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -178,3 +178,13 @@ td.sidebar {
 	border: 1px solid #999;
 	margin-bottom: -15px;
 }
+
+/* User index page */
+
+ul.users {
+	margin-top: 1em;
+}
+
+.users li {
+	list-style: none;
+}
